bug fixes - sorted viewport jump to top by removing HREF for closing video popup

--- a/css/securityvideos.css
+++ b/css/securityvideos.css
@@ -77,12 +77,13 @@
     margin-left: 10px;
     margin-top: 10px;
 }
-a.video-control {
+.video-control {
      display: block;
      text-align: center;
      vertical-align: top;
      color: black;
      font-weight: bolder;
+     cursor: pointer;
 }
 a.image-control {
     display: block;
